--- a/.env.example
+++ b/.env.example
@@ -3,19 +3,16 @@ SECRET_KEY=your-secret-key-here-generate-a-new-one
 ALLOWED_HOSTS=localhost,127.0.0.1,yourdomain.com
 
 DATABASE_ENGINE=django.db.backends.postgresql
-DATABASE_NAME=finance_tracker
-DATABASE_USER=finance_user
-DATABASE_PASSWORD=secure_password
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
 
 SECURE_SSL_REDIRECT=True
 SESSION_COOKIE_SECURE=True
 CSRF_COOKIE_SECURE=True
 
-EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
+
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000,http://127.0.0.1:3000,http://127.0.0.1:8000
