--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,33 @@
 venv/
 *.pyc
 __pycache__/
-*.sqlite3
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+db.sqlite3
 .DS_Store
 .env
+.env.local
+.env.*.local
 *.log
 staticfiles/
 media/
@@ -12,9 +36,8 @@ media/
 *.swp
 *.swo
 *~
-.pytest_cache/
-htmlcov/
 .coverage
+htmlcov/
 dist/
 build/
 *.egg-info/
